--- a/_includes/body/sidebar-sticky.html
+++ b/_includes/body/sidebar-sticky.html
@@ -17,7 +17,7 @@
         {{ text | markdownify | replace:'<p>','' | replace:'</p>','' }}
       </p>
       <div style="text-align: center;">
-        <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fsolight96.github.io&count_bg=%23C725C6&title_bg=%23702976&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/>
+        <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fsolight96.github.io&count_bg=%23C92BC2&title_bg=%236D1A70&icon=&icon_color=%23E7E7E7&title=%EB%B0%A9%EB%AC%B8+%ED%9A%9F%EC%88%98&edge_flat=false"/>
       </div>
     {% endif %}
   </div>
