--- a/_includes/head/meta-static.html
+++ b/_includes/head/meta-static.html
@@ -17,3 +17,16 @@
 <meta name="generator" content="Hydejack v9.0.5" />
 
 <meta name="google-site-verification" content="KZh69-s5X5fSrgXa9XrPDI5R9YHrEgeLBL4X6t6sGOg" />
+
+{% if page.header-img %}
+<meta property="og:image" content="{{ site.url }}/assets/{{ page.header-img }}">
+<br/>
+{% elsif tag.header-img %}
+<meta property="og:image" content="{{ site.url }}/assets/{{ tag.header-img }}">
+<br/>
+{% else %}
+<meta property="og:image" content="{{ site.url }}/assets/img/logo.png">
+{% endif %}
+
+<meta property="og:image:width" content="640" />
+<meta property="og:image:height" content="360" />
